dumpcpp: Don't put Qt types into the type library namespace

ActiveQt redefines three Qt types as structs in IDL files: QRect,
QPoint, and QSize. When dumpcpp is run on a type library that's created
from such an IDL file then it would write forward declarations of these
three types into the type libraries namespace. The resulting code did
not compile.

When writing forward declarations, skip these three types:
    struct QRect
    struct QPoint
    struct QSize

Also include the headers for these three classes. They are actually
already pulled in by the hard-coded qpixmap.h included, but it's more
future-proof to include these explicitly.

Fixes: QTBUG-134098
Pick-to: 6.9 6.8
Change-Id: I829e41f204216c4b2585f5a7c3940f5c400d43ab
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 2a3cd99c56a0fd0a154281f45825ca8513bb5fde)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>